sol/2015-p2-f1-caixinha.txt
Caixinha de Palitos
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2015f1p2_caixinha.cpp: In function ‘int main()’:
2015f1p2_caixinha.cpp:25:5: error: ‘memset’ was not declared in this scope
   25 |     memset(dp, -1, sizeof dp);
      |     ^~~~~~
2015f1p2_caixinha.cpp:3:1: note: ‘memset’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    2 | #include <iostream>
  +++ |+#include <cstring>
    3 |
